# StudWalls

./: .gitignore  Joist_and_Plank.csv  Joist_and_Plank.py  LICENSE  O86.py  OutExample.docx  OutPutExample.txt  README.md  Section.py  Stud_Walls.py  Stud_Walls_db.py  TODO.md  Wood.py  main.py  pyproject.toml  results  stud_wall_prd.md  wood_material.sqbpro  wood_materials
_OLD/: Stud_Walls.py
csv/: loads.csv  stories.csv  walls.csv
db/: create_library_db.py  library.db
jupyter/: gfg.db  materials.db  materials.db.db  results.db  results.sqbpro  sqlite_tests.ipynb
jupyter/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
licenses/: LICENSE.md  THIRD_PARTY_NOTICES.md
src/core/: __init__.py  calculator.py  calculator_OLD.py  database.py  project.py  results.py  units.py
src/data/: joist_and_plank.csv
src/models/: O86.py  __init__.py  joist_and_plank.py  load_combination.py  load_combination_item.py  loads.py  result.py  section.py  story.py  stud.py  wall.py  wall_story.py  wood.py
src/ui/about_dialog/: about_dialog.py
src/ui/about_dialog/about_ui/: about_dialog.py  about_dialog.ui
src/ui/load_combos_dialog/: load_combos_dialog.py
src/ui/load_combos_dialog/load_combos_ui/: load_combos_dialog.py  load_combos_dialog.ui
src/ui/loads_dialog/: loads_dialog.py
src/ui/main_window/: main_window.py
src/ui/materials_dialog/: materials_dialog.py
src/ui/stories_dialog/: stories_dialog.py
src/ui/studs_dialog/: studs_dialog.py
src/ui/walls_dialog/: walls_dialog.py
tests/: test_calculator.py  test_wood_db.py
(+12 files in other folders)
