[project]
name = "studwalls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "pyside6>=6.9.1",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.43",
]

[project.gui-scripts]
studwalls = "main:main"